--- a/src/components/header-footer/Footer.css
+++ b/src/components/header-footer/Footer.css
@@ -1,5 +1,5 @@
 .hf-footer {
-  height: 70px;
+  height: 50px;
   background: #000;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
 /* MOBILE VIEW  */
 @media (max-width: 768px){
 .hf-footer {
-  height: 55px;
+  height: 50px;
   background: #000;
   display: flex;
   justify-content: center;
@@ -44,7 +44,7 @@
 }
 
 .hf-address {
-  font-size: 1.2rem;
+  font-size: 0.8rem;
 }
 /* MOBILE VIEW  */
 @media (max-width: 768px){
